separated controllers, but not working. routes not working for some reason

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -43,6 +43,10 @@ li.collection-item{
     color:black;
 }
 
+#addTask,#clearTasks{
+    width:100%;
+}
+
 .strikethrough{
     text-decoration: line-through;
 }
