--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div id="userQuestions" class="modal">
+    {{!-- <div id="userQuestions" class="modal">
         <div class="modal-content">
           <h4>Lets get to know you a bit</h4>
           <div class='row'>
@@ -181,23 +181,10 @@
         <div class="modal-footer">
           <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
         </div>
-    </div>
-
-    <nav>
-        <div class="nav-wrapper">
-            <!-- <a href="#" class="brand-logo">User Number: </a> -->
-            <h3 class='left-align brand-logo'>User Number: </h3>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#toDo">To Do</a></li>
-            <li><a href="#weather">Weather</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#toothTimer">Tooth Timer</a></li>
-            </ul>
-        </div>
-    </nav>
+    </div> --}}
 
     {{{body}}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="./app.js"></script>
+  {{!-- <script type="text/javascript" src="./app.js"></script> --}}
 </body>
