routing WORKING BOI

--- a/views/layouts/forms.handlebars
+++ b/views/layouts/forms.handlebars
@@ -17,5 +17,5 @@
     {{{body}}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="./app.js"></script>
+  <script type="text/javascript" src="./form.js"></script>
 </body>
