--- a/views/layouts/rootCheckMain.handlebars
+++ b/views/layouts/rootCheckMain.handlebars
@@ -13,9 +13,8 @@
 </head>
 
 <body>
-
     {{{body}}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="./app.js"></script>
+  <script type="text/javascript" src="./redirect.js"></script>
 </body>
