--- a/views/rootCheck.handlebars
+++ b/views/rootCheck.handlebars
@@ -1,36 +1,4 @@
 <div class='container'>
-    <div class="col s12">
-        <h2 class="header">Horizontal Card</h2>
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="https://lorempixel.com/100/190/nature/6">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                </div>
-            </div>
-        </div>
-        <h2 class="header">Horizontal Card</h2>
-        <div class="card horizontal">
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                </div>
-            </div>
-            <div class="card-image">
-                <img src="https://lorempixel.com/100/190/nature/6">
-            </div>
-        </div>
-    </div>
-
-    
+ <h1>hi bro this is the homepage and will never show</h1>
 </div>
 
-  <script type="text/javascript" src="./redirect.js"></script>
