fixed app.js errors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,6 +54,11 @@
   <div class="parallax-container center-align">
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='weather'>Weather Baby</h2>
+    <button onclick="getLocation()">Try It</button>
+
+    <!-- weather current location tracker -->
+
+    <p id="demo"></p>
   </div>
 
   <div class='row section scrollspy' id='news'>
