fixed up routing. added new user form

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -43,10 +43,13 @@ li.collection-item{
     color:black;
 }
 
-#addTask,#clearTasks{
+#addTask,#clearTasks,#newUserAdd{
     width:100%;
 }
-
+form{
+    padding:10% 0;
+    margin:10% 0;
+}
 .strikethrough{
     text-decoration: line-through;
 }
