--- a/views/formchoice.handlebars
+++ b/views/formchoice.handlebars
@@ -1,11 +1,50 @@
-<div class='container'>
+{{!-- <div class='container'>
     <div class='card hover'>
-        <a href='/form/enternumber'>enter user number</ahref>
+        <a href='/form/enternumber'>enter user number</a>
     </div>
-</div>
 
-<div class='container'>
     <div class='card hover'>
         <a href='/form/new'>input user preferences</a>
     </div>
+</div> --}}
+
+<div class='container'>
+    <div class='row'>
+    <div class="col s12">
+        <h2 class="header">Enter User Number</h2>
+        <div class="card horizontal">
+            <div class="card-image">
+                <img src="https://lorempixel.com/100/190/">
+            </div>
+        <div class="card-stacked">
+            <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+            <a href="#">This is a link</a>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+
+    <div class='row'>
+        <div class="col s12">
+        <h2 class="header">Create New Profile</h2>
+        <div class="card horizontal">
+        <div class="card-stacked">
+            <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+            <a href="#">This is a link</a>
+            </div>
+        </div>
+        <div class="card-image">
+            <img src="https://lorempixel.com/100/190/">
+        </div>
+        </div>
+        </div>
+    </div>
 </div>
+
