--- a/views/rootCheck.handlebars
+++ b/views/rootCheck.handlebars
@@ -1,4 +1,4 @@
 <div class='container'>
- <h1>hi bro this is the homepage and will never show</h1>
+ <h1>hi this is the root page and only exists to check localStorage for userMorningNumber</h1>
 </div>
 
