fixed up form appearances

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -43,13 +43,10 @@ li.collection-item{
     color:black;
 }
 
-#addTask,#clearTasks,#newUserAdd{
+#addTask,#clearTasks{
     width:100%;
 }
-form{
-    padding:10% 0;
-    margin:10% 0;
-}
+
 .strikethrough{
     text-decoration: line-through;
 }
