--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -2,7 +2,7 @@
     <div class='card hover'>
         <div class='container'>
             <form>
-                <h2 class="header">Enter User Info</h2>
+                <h2 class="header notWhite">Enter User Info</h2>
                 <div class='row'>
                 <div class="input-field col s12">
                     <input id="first_name" type="text" class="validate">
