--- a/views/enterUser.handlebars
+++ b/views/enterUser.handlebars
@@ -1,10 +1,21 @@
-<div class='card hover'>
-    <div class='container'>
-        <div class='row'>
-            <div class="input-field col s12">
-                <input id="enteredNumber" type="text" class="validate">
-                <label for="enteredNumber">Enter Your User Number!</label>
-            </div>
+<div class='container'>
+    <div class='card hover'>
+        <div class='container'>
+            <form>
+                <div class='row'>
+                    <div class='col s12'>
+                        <div class="input-field">
+                            <input id="userNumberEntered" type="text" class="validate">
+                            <label for="userNumberEntered">User Number</label>
+                        </div>
+                    </div>
+                </div>
+                <div class='row'>
+                    <div class='col s12'>
+                        <a href='/form/enternumber' class='btn-large btn'>Enter User Number</a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
