createNewUser and searchUserNumber working on all levels. need to work on refreshing page after calls

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
  <nav>
   <div class="nav-wrapper">
       <!-- <a href="#" class="brand-logo">User Number: </a> -->
-      <h3 class='left-align brand-logo'>User Number: </h3>
+      <h2 class='left-align brand-logo'>{{name}}'s morning</h2>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="#toDo">To Do</a></li>
       <li><a href="#weather">Weather</a></li>
@@ -16,7 +16,7 @@
 <div class="parallax-container valign-wrapper">
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     {{#if motivation}}
-      <h1 class='center-align'>{{this.motivation}}</h1>
+      <h1 class='center-align'>{{motivation}}</h1>
     {{/if}}
 </div>
 
