--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -5,8 +5,8 @@
                 <h2 class="header notWhite">Enter User Info</h2>
                 <div class='row'>
                 <div class="input-field col s12">
-                    <input id="first_name" type="text" class="validate">
-                    <label for="first_name">First Name</label>
+                    <input id="name" type="text" class="validate">
+                    <label for="name">Name</label>
                 </div>
                 </div>
 
@@ -16,7 +16,7 @@
                         <label for="homeCity">Home City</label>
                     </div>
                     <div class="input-field col s4">
-                        <select>
+                        <select id='state'>
                             <option value="" disabled selected>Choose State</option>
                             <option value="AL">AL</option>
                             <option value="AK">AK</option>
