--- a/views/enterUser.handlebars
+++ b/views/enterUser.handlebars
@@ -12,7 +12,7 @@
                 </div>
                 <div class='row'>
                     <div class='col s12'>
-                        <a href='/form/enternumber' class='btn-large btn'>Enter User Number</a>
+                        <a id='searchUserNumber' class='btn-large btn'>Enter User Number</a>
                     </div>
                 </div>
             </form>
