--- a/views/formchoice.handlebars
+++ b/views/formchoice.handlebars
@@ -21,7 +21,7 @@
 
     <div class='row'>
         <div class="col s12">
-            <h3 class="header notWhite">Enter User Number</h3>
+            <h3 class="header">Enter User Number</h3>
             <div class="card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
