--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -50,3 +50,19 @@ li.collection-item{
 .strikethrough{
     text-decoration: line-through;
 }
+#demo{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 25px;
+    font-weight: bold;
+}
+.submit{
+    width: 8%;
+    height: 8%;
+    text-align: center;
+    border-radius: 10px;
+    background-color: black;
+    color: antiquewhite;
+}
+#news{
+    font-size: 20px !important;
+}
