--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,7 +69,7 @@
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='weather'>Weather-Information</h2>
 
-    <button onclick="getLocation()">Try It</button>
+    <button onclick="showPosition()">Try It</button>
     <input type="hidden" id="longi" value='{{longitude}}'></input>
     <input type="hidden" id="lat" value='{{latitude}}'></input>
 
