added news api via ajax just in case npm doesn't work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -78,6 +78,7 @@
   <div class='row section scrollspy' id='news'>
       <div class='container col s12 center-align section'>
         <h2>News for the day goes here</h2>
+        <a id='checkNews'class='btn btn-large'>check news</a>
       </div>
   </div>
 
