--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -75,7 +75,7 @@
                 
                 <div class='row'>
                     <div class="input-field col s12">
-                        <select multiple>
+                        <select multiple id='multipleInterest'>
                             <option value="" disabled selected>What kind of news interests you the most?</option>
                             <option value="business">Business</option>
                             <option value="entertainment">Entertainment</option>
