--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -80,7 +80,8 @@
 
   <div class='row section scrollspy' id='news'>
       <div class='container col s12 center-align section'>
-        <h4>News for the day goes here</h4>
+        <span class="blink_me">LIVE-NEWS</span>
+       <ul id="newsNew"></ul>
       </div>
   </div>
 
