--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -34,12 +34,14 @@ li.collection-item{
 
 #toothTimerButton{
     height:50%;
-    padding:10%;
     line-height:1; 
-    font-size:150%;
+    font-size:50px;
     width:70%;
     background-color:rgb(196, 112, 207);
     color:black;
+    size: 50px;
+    text-align: center;
+    padding-top: 7%;
 }
 
 
