--- a/views/newUser.handlebars
+++ b/views/newUser.handlebars
@@ -69,22 +69,31 @@
                             <option value="WI">WI</option>
                             <option value="WY">WY</option>
                         </select>
-                        <label>STATE</label>
                     </div>
                 </div>
                 
                 <div class='row'>
                     <div class="input-field col s12">
-                        <select multiple id='multipleInterest'>
-                            <option value="" disabled selected>What kind of news interests you the most?</option>
-                            <option value="business">Business</option>
-                            <option value="entertainment">Entertainment</option>
-                            <option value="general">General</option>
-                            <option value="health">Health</option>
-                            <option value="science">Science</option>
-                            <option value="sports">Sports</option>
-                            <option value="technology">Technology</option>
+                        <select multiple id='sourceSelect'>
+                            <option value="" disabled selected>What News Sources do you prefer?</option>
+                            <option value="abc-news">ABC News</option>
+                            <option value="ars-technica">Ars Technica</option>
+                            <option value="associated-press">Associated Press</option>
+                            <option value="bbc-news">BBC News</option>
+                            <option value="bloomberg">Bloomberg</option>
+                            <option value="business-insider">Business Insider</option>
+                            <option value="cnn">CNN</option>
+                            <option value="espn">ESPN</option>
+                            <option value="fox-news">Fox News</option>
+                            <option value="national-geographic">National Geographic</option>
+                            <option value="reddit-r-all">Reddit/r/all</option>
+                            <option value="reuters">Reuters</option>
+                            <option value="the-sport-bible">The Sport Bible</option>
+                            <option value="techcrunch">TechCrunch</option>
+                            <option value="vice-news">Vice News</option>
+                            <option value="the-washington-times">The Washington Times</option>
                         </select>
+                        {{!-- <label>Which news sources do you prefer?</label> --}}
                     </div>
                 </div>
                 
