--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -21,11 +21,15 @@ nav{
     /* background-image:url(./assets/images/quoteBack2.jpg); */
 }
 
-nav ul a, nav a{
+nav ul a, nav a,.collection a.collection-item{
     color:#308DDA;
+}
+.collection a.collection-item{
+    color:rgb(196, 112, 207);
 }
 nav .brand-logo{
     color:#308DDA;
+    margin-left:10px;
 }
 
 li.collection-item{
@@ -36,10 +40,14 @@ li.collection-item{
     height:30%;
     padding:10%;
     line-height:1; 
-    font-size:150%;
+    /* font-size:150%; */
+    font-size:50px;
     width:60%;
     background-color:rgb(196, 112, 207);
     color:black;
+    /* size: 50px; */
+    text-align: center;
+    padding-top: 7%;
 }
 
 .buttonContainer{
@@ -64,10 +72,19 @@ li.collection-item{
 
 #motivation{
     margin-top:10%;
+    font-size: 80px;
 }
 
 #newsContainer{
-    margin-left:15%;
+    margin-left:12%;
     margin-right:auto;
     overflow: hidden;
 } 
+
+.card .card-content p {
+    margin-top:20px;
+}
+
+.card .card-title,#toothtimer{
+    font-weight: bold;
+}
